make scheduler and duration optional for apis

--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -44,12 +44,12 @@ spec:
                 pod.
               type: string
             delay:
-              description: "Delay defines the value of I/O chaos action delay. It
-                is required when the action is `PodFailureAction`. A delay string
-                is a possibly signed sequence of decimal numbers, each with optional
-                fraction and a unit suffix, such as \"300ms\". Valid time units are
-                \"ns\", \"us\" (or \"µs\"), \"ms\", \"s\", \"m\", \"h\". \n If `Delay`
-                is empty, the operator will generate a value for it randomly."
+              description: "Delay defines the value of I/O chaos action delay. A delay
+                string is a possibly signed sequence of decimal numbers, each with
+                optional fraction and a unit suffix, such as \"300ms\". Valid time
+                units are \"ns\", \"us\" (or \"µs\"), \"ms\", \"s\", \"m\", \"h\".
+                \n If `Delay` is empty, the operator will generate a value for it
+                randomly."
               type: string
             duration:
               description: Duration represents the duration of the chaos action. It
@@ -66,7 +66,7 @@ spec:
               type: string
             layer:
               description: 'Layer represents the layer of the I/O action. Supported
-                value: fs / errno / mixed. Default layer: fs'
+                value: fs. Default layer: fs'
               type: string
             methods:
               description: 'Methods defines the I/O methods for injecting I/O chaos
@@ -79,11 +79,11 @@ spec:
                 one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
-              description: Next time when this action will be recovered
+              description: Next time when this action will be recovered.
               format: date-time
               type: string
             nextStart:
-              description: Next time when this action will be applied again
+              description: Next time when this action will be applied again.
               format: date-time
               type: string
             path:
@@ -147,6 +147,13 @@ spec:
                   items:
                     type: string
                   type: array
+                phaseSelector:
+                  description: 'PodPhaseSelector is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -170,7 +177,6 @@ spec:
           - configName
           - layer
           - mode
-          - scheduler
           - selector
           type: object
         status:
@@ -397,6 +403,13 @@ spec:
                   items:
                     type: string
                   type: array
+                phaseSelector:
+                  description: 'PodPhaseSelector is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -453,6 +466,13 @@ spec:
                       items:
                         type: string
                       type: array
+                    phaseSelector:
+                      description: 'PodPhaseSelector is a set of condition of a pod
+                        at the current time. supported value: Pending / Running /
+                        Succeeded / Failed / Unknown'
+                      items:
+                        type: string
+                      type: array
                     pods:
                       additionalProperties:
                         items:
@@ -485,9 +505,7 @@ spec:
               type: string
           required:
           - action
-          - duration
           - mode
-          - scheduler
           - selector
           type: object
         status:
@@ -677,6 +695,13 @@ spec:
                   items:
                     type: string
                   type: array
+                phaseSelector:
+                  description: 'PodPhaseSelector is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -698,7 +723,6 @@ spec:
           required:
           - action
           - mode
-          - scheduler
           - selector
           type: object
         status:
