--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -156,6 +156,13 @@ spec:
                   items:
                     type: string
                   type: array
+                phaseSelector:
+                  description: 'PodPhaseSelector is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -212,6 +219,13 @@ spec:
                       items:
                         type: string
                       type: array
+                    phaseSelector:
+                      description: 'PodPhaseSelector is a set of condition of a pod
+                        at the current time. supported value: Pending / Running /
+                        Succeeded / Failed / Unknown'
+                      items:
+                        type: string
+                      type: array
                     pods:
                       additionalProperties:
                         items:
@@ -244,9 +258,7 @@ spec:
               type: string
           required:
           - action
-          - duration
           - mode
-          - scheduler
           - selector
           type: object
         status:
