--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -117,9 +117,9 @@ spec:
                     type: string
                   type: array
                 phaseSelector:
-                  description: 'PodPhaseSelector is a set of condition of a pod at
-                    the current time. supported value: Pending / Running / Succeeded
-                    / Failed / Unknown'
+                  description: 'PhaseSelector is a set of condition of a pod at the
+                    current time. supported value: Pending / Running / Succeeded /
+                    Failed / Unknown'
                   items:
                     type: string
                   type: array
