--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -157,9 +157,9 @@ spec:
                     type: string
                   type: array
                 phaseSelector:
-                  description: 'PodPhaseSelector is a set of condition of a pod at
-                    the current time. supported value: Pending / Running / Succeeded
-                    / Failed / Unknown'
+                  description: 'PhaseSelector is a set of condition of a pod at the
+                    current time. supported value: Pending / Running / Succeeded /
+                    Failed / Unknown'
                   items:
                     type: string
                   type: array
@@ -220,9 +220,9 @@ spec:
                         type: string
                       type: array
                     phaseSelector:
-                      description: 'PodPhaseSelector is a set of condition of a pod
-                        at the current time. supported value: Pending / Running /
-                        Succeeded / Failed / Unknown'
+                      description: 'PhaseSelector is a set of condition of a pod at
+                        the current time. supported value: Pending / Running / Succeeded
+                        / Failed / Unknown'
                       items:
                         type: string
                       type: array
