--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -55,6 +55,11 @@ chaosDaemon:
   # socketPath specifies the container runtime socket.
   socketPath: /var/run/docker.sock
 
+  # If you are using Kind or using containerd as CRI, you can use the
+  # config below to use containerd as the runtime in chaos-daemon.
+  # runtime: containerd
+  # socketPath: /run/containerd/containerd.sock
+
 dashboard:
   create: false
 
