--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -150,9 +150,9 @@ spec:
                     type: string
                   type: array
                 phaseSelector:
-                  description: 'PhaseSelector is a set of condition of a pod at the
-                    current time. supported value: Pending / Running / Succeeded /
-                    Failed / Unknown'
+                  description: 'PodPhaseSelectors is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
                   items:
                     type: string
                   type: array
