make crd latest

--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -147,7 +147,7 @@ spec:
                   items:
                     type: string
                   type: array
-                phaseSelector:
+                phaseSelectors:
                   description: 'PodPhaseSelectors is a set of condition of a pod at
                     the current time. supported value: Pending / Running / Succeeded
                     / Failed / Unknown'
@@ -403,7 +403,7 @@ spec:
                   items:
                     type: string
                   type: array
-                phaseSelector:
+                phaseSelectors:
                   description: 'PodPhaseSelectors is a set of condition of a pod at
                     the current time. supported value: Pending / Running / Succeeded
                     / Failed / Unknown'
@@ -466,7 +466,7 @@ spec:
                       items:
                         type: string
                       type: array
-                    phaseSelector:
+                    phaseSelectors:
                       description: 'PodPhaseSelectors is a set of condition of a pod
                         at the current time. supported value: Pending / Running /
                         Succeeded / Failed / Unknown'
@@ -695,7 +695,7 @@ spec:
                   items:
                     type: string
                   type: array
-                phaseSelector:
+                phaseSelectors:
                   description: 'PodPhaseSelectors is a set of condition of a pod at
                     the current time. supported value: Pending / Running / Succeeded
                     / Failed / Unknown'
