--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -116,7 +116,7 @@ spec:
                   items:
                     type: string
                   type: array
-                phaseSelectors:
+                podPhaseSelectors:
                   description: 'PodPhaseSelectors is a set of condition of a pod at
                     the current time. supported value: Pending / Running / Succeeded
                     / Failed / Unknown'
