--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -156,7 +156,7 @@ spec:
                   items:
                     type: string
                   type: array
-                phaseSelectors:
+                podPhaseSelectors:
                   description: 'PodPhaseSelectors is a set of condition of a pod at
                     the current time. supported value: Pending / Running / Succeeded
                     / Failed / Unknown'
@@ -219,7 +219,7 @@ spec:
                       items:
                         type: string
                       type: array
-                    phaseSelectors:
+                    podPhaseSelectors:
                       description: 'PodPhaseSelectors is a set of condition of a pod
                         at the current time. supported value: Pending / Running /
                         Succeeded / Failed / Unknown'
