--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -149,6 +149,13 @@ spec:
                   items:
                     type: string
                   type: array
+                podPhaseSelectors:
+                  description: 'PodPhaseSelectors is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -172,7 +179,6 @@ spec:
           - configName
           - layer
           - mode
-          - scheduler
           - selector
           type: object
         status:
