--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -116,6 +116,13 @@ spec:
                   items:
                     type: string
                   type: array
+                podPhaseSelectors:
+                  description: 'PodPhaseSelectors is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
                 pods:
                   additionalProperties:
                     items:
@@ -137,7 +144,6 @@ spec:
           required:
           - action
           - mode
-          - scheduler
           - selector
           type: object
         status:
