--- a/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
@@ -33,6 +33,10 @@ spec:
             - /usr/local/bin/chaos-daemon
             - --runtime
             - {{ .Values.chaosDaemon.runtime }}
+            - --http-port
+            - !!str {{ .Values.chaosDaemon.httpPort }}
+            - --grpc-port
+            - !!str {{ .Values.chaosDaemon.grpcPort }}
           env:
             - name: PORT
               value: !!str {{ .Values.chaosDaemon.port }}
@@ -48,8 +52,11 @@ spec:
               mountPath: /run/containerd/containerd.sock
               {{- end }}
           ports:
-            - containerPort: {{ .Values.chaosDaemon.port }}
-              hostPort: {{ .Values.chaosDaemon.port }}
+            - name: grpc
+              containerPort: {{ .Values.chaosDaemon.grpcPort }}
+              hostPort: {{ .Values.chaosDaemon.grpcPort }}
+            - name: http
+              containerPort: {{ .Values.chaosDaemon.httpPort }}
       volumes:
         - name: proc
           hostPath:
