--- a/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
@@ -20,6 +20,10 @@ spec:
         app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/component: chaos-daemon
+    {{- with .Values.chaosDaemon.podAnnotations }}
+      annotations:
+{{ toYaml . | indent 8 }}
+    {{- end }}
     spec:
       containers:
         - name: chaos-daemon
