--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -43,10 +43,14 @@ controllerManager:
 
   affinity: {}
 
+  podAnnotations: {}
+
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
   imagePullPolicy: Always
   port: 31767
+
+  podAnnotations: {}
 
   # runtime specifies which container runtime to use. Currently
   # we only supports docker and containerd.
@@ -74,6 +78,8 @@ dashboard:
 
   affinity: {}
 
+  podAnnotations: {}
+
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
@@ -89,3 +95,9 @@ dashboard:
   volume:
     storage: 3Gi
     storageClassName: standard
+
+preJobs:
+  podAnnotations: {}
+
+postJobs:
+  podAnnotations: {}
