Support prometheus metrics in chaos-daemon (#210)
* support basic metrics in chaos-daemon

Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -48,7 +48,8 @@ controllerManager:
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
   imagePullPolicy: Always
-  port: 31767
+  grpcPort: 31767
+  httpPort: 31766
 
   podAnnotations: {}
 
