--- a/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
@@ -37,9 +37,10 @@ spec:
             - /usr/local/bin/chaos-daemon
             - --runtime
             - {{ .Values.chaosDaemon.runtime }}
-          env:
-            - name: PORT
-              value: !!str {{ .Values.chaosDaemon.port }}
+            - --http-port
+            - !!str {{ .Values.chaosDaemon.httpPort }}
+            - --grpc-port
+            - !!str {{ .Values.chaosDaemon.grpcPort }}
           securityContext:
             privileged: true
           volumeMounts:
@@ -52,8 +53,11 @@ spec:
               mountPath: /run/containerd/containerd.sock
               {{- end }}
           ports:
-            - containerPort: {{ .Values.chaosDaemon.port }}
-              hostPort: {{ .Values.chaosDaemon.port }}
+            - name: grpc
+              containerPort: {{ .Values.chaosDaemon.grpcPort }}
+              hostPort: {{ .Values.chaosDaemon.grpcPort }}
+            - name: http
+              containerPort: {{ .Values.chaosDaemon.httpPort }}
       volumes:
         - name: proc
           hostPath:
