--- a/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-deployment.yaml
@@ -21,6 +21,8 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/component: chaos-daemon
     spec:
+      hostIPC: true
+      hostPID: true
       containers:
         - name: chaos-daemon
           image: {{ .Values.chaosDaemon.image }}
@@ -38,8 +40,9 @@ spec:
               value: !!str {{ .Values.chaosDaemon.port }}
           securityContext:
             privileged: true
-            hostIPC: true
-            hostPID: true
+            capabilities:
+              add:
+                - SYS_PTRACE
           volumeMounts:
             - name: socket-path
               {{- if eq .Values.chaosDaemon.runtime "docker" }}
