--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -16,7 +16,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -45,7 +45,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
   port: 31767
 
   # runtime specifies which container runtime to use. Currently
@@ -66,7 +66,7 @@ dashboard:
   serviceAccount: chaos-dashboard
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nodeSelector: {}
 
