--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -44,7 +44,7 @@ controllerManager:
   affinity: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
+  image: 5000/pingcap/chaos-daemon:latest
   imagePullPolicy: Always
   port: 31767
 
