add etcd iochaos example
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/examples/etcd/etcd-configmap.yaml
+++ b/examples/etcd/etcd-configmap.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: webhook
 data:
   chaosfs-etcd.yaml: |
-    name: chaosfs-pd
+    name: chaosfs-etcd
     initContainers:
     - name: inject-scripts
       image: pingcap/chaos-scripts:latest
