--- a/images/chaosfs/Dockerfile
+++ b/images/chaosfs/Dockerfile
@@ -1,5 +1,9 @@
-FROM alpine:3.5
+FROM alpine:3.10
+
+ARG HTTPS_PROXY
+ARG HTTP_PROXY
 
 ENV TZ /etc/localtime
 RUN apk add --no-cache tzdata fuse
-ADD bin/chaosfs /usr/local/bin/chaosfs
+
+COPY --from=pingcap/binary /src/bin/chaosfs /usr/local/bin/chaosfs
