--- a/images/chaos-scripts/Dockerfile
+++ b/images/chaos-scripts/Dockerfile
@@ -1,6 +1,10 @@
-FROM alpine:3.5
+FROM alpine:3.10
+
+ARG HTTPS_PROXY
+ARG HTTP_PROXY
 
 RUN apk add tzdata --no-cache
 RUN mkdir -p /scripts
-ADD scripts/wait-fuse.sh /scripts/wait-fuse.sh
-ADD scripts/init.sh /scripts/init.sh
+
+COPY --from=pingcap/binary /src/scripts/wait-fuse.sh /scripts/wait-fuse.sh
+COPY --from=pingcap/binary /src/scripts/init.sh /scripts/init.sh
