--- a/helm/chaos-mesh/templates/controller-manager-service.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-service.yaml
@@ -11,12 +11,12 @@ metadata:
 spec:
   type: {{ .Values.controllerManager.service.type }}
   ports:
-#    - port: {{ .Values.controllerManager.service.port }}
-#      targetPort: http
-#      protocol: TCP
-#      name: http
+    - port: 8080
+      targetPort: http
+      protocol: TCP
+      name: http
     - port: 443
-      targetPort: 9443
+      targetPort: webhook
       protocol: TCP
       name: webhook
   selector:
