--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -39,7 +39,7 @@ spec:
                 action: pod-kill / pod-failure Default action: pod-kill'
               type: string
             containerName:
-              description: ContainerName Indicates the name of the container. Needed
+              description: ContainerName indicates the name of the container. Needed
                 in container-kill.
               type: string
             duration:
