Add prometheus in helm chart (#230)
* add prometheus

Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -96,6 +96,41 @@ dashboard:
     storage: 3Gi
     storageClassName: standard
 
+prometheus:
+  create: false
+
+  serviceAccount: prometheus
+
+  image: prom/prometheus:v2.15.2
+  imagePullPolicy: IfNotPresent
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  podAnnotations: {}
+
+  resources:
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    limits:
+      cpu: 500m
+      memory: 1024Mi
+    requests:
+      cpu: 250m
+      memory: 512Mi
+
+  service:
+    type: ClusterIP
+
+  volume:
+    storage: 2Gi
+    storageClassName: standard
+
 preJobs:
   podAnnotations: {}
 
