--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -24,6 +24,9 @@ controllerManager:
   service:
     type: ClusterIP
 
+  # enableProfiling is a flag to enable pprof in controller-manager
+  enableProfiling: false
+
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
