set default pprof to 0
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -39,6 +39,9 @@ spec:
           - /usr/local/bin/chaos-controller-manager
           - -configmap-labels=app.kubernetes.io/component=webhook
           - -conf=/etc/webhook/conf
+        {{- if .Values.controllerManager.enableProfiling }}
+          - -pprof-addr=:10081
+        {{- end }}
         env:
           - name: NAMESPACE
             valueFrom:
