make pprof optional in chaos-daemon
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -43,6 +43,9 @@ spec:
             - !!str {{ .Values.chaosDaemon.httpPort }}
             - --grpc-port
             - !!str {{ .Values.chaosDaemon.grpcPort }}
+          {{- if .Values.enableProfiling }}
+            - --pprof
+          {{- end }}
           securityContext:
             privileged: true
             capabilities:
