--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -39,7 +39,7 @@ spec:
           - /usr/local/bin/chaos-controller-manager
           - -configmap-labels=app.kubernetes.io/component=webhook
           - -conf=/etc/webhook/conf
-        {{- if .Values.controllerManager.enableProfiling }}
+        {{- if .Values.enableProfiling }}
           - -pprof-addr=:10081
         {{- end }}
         env:
@@ -60,7 +60,7 @@ spec:
             containerPort: 9443 # Customize containerPort
           - name: http
             containerPort: 10080
-        {{- if .Values.controllerManager.enableProfiling }}
+        {{- if .Values.enableProfiling }}
           - name: pprof
             containerPort: 10081
         {{- end }}
