--- a/helm/chaos-mesh/templates/controller-manager-service.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-service.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   type: {{ .Values.controllerManager.service.type }}
   ports:
-  {{- if .Values.controllerManager.enableProfiling }}
+  {{- if .Values.enableProfiling }}
     - port: 10081
       targetPort: pprof
       protocol: TCP
