--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -10,6 +10,9 @@ clusterScoped: true
 rbac:
   create: true
 
+# enableProfiling is a flag to enable pprof in controller-manager and chaos-daemon.
+enableProfiling: false
+
 controllerManager:
   serviceAccount: chaos-controller-manager
 
@@ -23,9 +26,6 @@ controllerManager:
 
   service:
     type: ClusterIP
-
-  # enableProfiling is a flag to enable pprof in controller-manager
-  enableProfiling: false
 
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
