--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -39,6 +39,9 @@ spec:
           - /usr/local/bin/chaos-controller-manager
           - -configmap-labels=app.kubernetes.io/component=webhook
           - -conf=/etc/webhook/conf
+        {{- if .Values.enableProfiling }}
+          - -pprof-addr=:10081
+        {{- end }}
         env:
           - name: NAMESPACE
             valueFrom:
@@ -57,6 +60,10 @@ spec:
             containerPort: 9443 # Customize containerPort
           - name: http
             containerPort: 10080
+        {{- if .Values.enableProfiling }}
+          - name: pprof
+            containerPort: 10081
+        {{- end }}
       volumes:
         - name: webhook-certs
           secret:
