--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -36,7 +36,7 @@ spec:
           properties:
             action:
               description: 'Action defines the specific pod chaos action. Supported
-                action: pod-kill / pod-failure Default action: pod-kill'
+                action: pod-kill / pod-failure / container-kill Default action: pod-kill'
               type: string
             containerName:
               description: ContainerName indicates the name of the container. Needed
