Support cert-manager for certificate management

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -67,7 +67,7 @@ spec:
       volumes:
         - name: webhook-certs
           secret:
-            secretName: webhook-certs
+            secretName: {{ template "chaos-mesh.certs" . }}
     {{- with .Values.controllerManager.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
